--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://backend-medias.onrender.com
+# VITE_API_URL=https://backend-medias.onrender.com
+VITE_API_URL=http://localhost:3000
